# Raster-Graphics-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Raster-Graphics-Editor/: CMakeLists.txt  main.cpp
Raster-Graphics-Editor/Core/: IPlatform.h  IRenderer.h  ITexture.h  IWindow.h
Raster-Graphics-Editor/Core/Input/: InputSystem.cpp  InputSystem.h
src/: CMakeLists.txt  main.cpp
src/Core/: FrameBuffer.cpp  FrameBuffer.h  IFrameBuffer.h  IPlatform.h  IRenderer.h  ITexture.h  IUIPlatformLayer.h
src/Core/Input/: InputCodes.h
src/Graphics/: CPURasterizer.cpp  CPURasterizer.h  IRasterizer.h
src/Graphics/Shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.h
src/UI/: UIManager.cpp  UIManager.h
